--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Pixel Perfect Dude</title>
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
 		type="text/css">
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
