--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Pixel Perfect Dude</title>
-	<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
 		type="text/css">
-	<link href="./style.css" rel="stylesheet" type="text/css">
+	<link href="https://pixelperfectdude.github.io/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 		<div class="uk-grid">
 			<div id="navigation" class="uk-width-medium-1-4">
 				<h1 class="nav-header">Pixel Perfect Dude</h1>
-				<a class="nav-header" href="http://pixelperfectdude.com">pixelperfectdude.com</a>
+				<a class="nav-header" href="https://pixelperfectdude.com">pixelperfectdude.com</a>
 				<ul class="uk-nav uk-nav-side">
 					<li><a href="#factsheet">Factsheet</a></li>
 					<li><a href="#description">Description</a></li>
@@ -46,7 +46,7 @@
 						</p>
 						<p>
 							<strong>Website:</strong><br />
-							<a href="http://pixelperfectdude.com">pixelperfectdude.com</a>
+							<a href="https://pixelperfectdude.com">pixelperfectdude.com</a>
 						</p>
 						<p>
 							<strong>Social:</strong><br /><a
@@ -81,7 +81,7 @@
 								<a href="https://drive.game">#DRIVE</a>
 							</li>
 							<li>
-								<a href="drive-rally.html">#DRIVE Rally</a>
+								<a href="https://pixelperfectdude.github.io/drive-rally.html">#DRIVE Rally</a>
 							</li>
 							<li>
 								<a href="https://www.skijumpgame.com/">Ski Jump</a>
@@ -97,39 +97,39 @@
 
 				<h2 id="trailers">Videos</h2>
 				<p><strong>#DRIVE Rally - Reveal Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/Pracg9fAmzg">YouTube</a>
+						href="https://www.youtube.com/embed/Pracg9fAmzg">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/Pracg9fAmzg" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/Pracg9fAmzg" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE Rally - Demo Gameplay Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/4J7UnJNRLcw">YouTube</a>
+						href="https://www.youtube.com/embed/4J7UnJNRLcw">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/4J7UnJNRLcw" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/4J7UnJNRLcw" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE - Official Announcement Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/ufLq0lq1R5Q">YouTube</a>
+						href="https://www.youtube.com/embed/ufLq0lq1R5Q">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/ufLq0lq1R5Q" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/ufLq0lq1R5Q" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE - Gameplay Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/fhrIH6gir04">YouTube</a>
+						href="https://www.youtube.com/embed/fhrIH6gir04">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/fhrIH6gir04" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/fhrIH6gir04" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE - Launch Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/Xciy2_Rj9kQ">YouTube</a>
+						href="https://www.youtube.com/embed/Xciy2_Rj9kQ">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/Xciy2_Rj9kQ" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/Xciy2_Rj9kQ" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE - Nintendo Switch Launch Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/yi4gOixZpck">YouTube</a>
+						href="https://www.youtube.com/embed/yi4gOixZpck">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/yi4gOixZpck" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/yi4gOixZpck" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<hr>
@@ -207,18 +207,18 @@
 
 				<hr>
 
-				<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a
-						href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a
-						href="http://dopresskit.com/#thanks">these fine folks</a></p>
+				<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a
+						href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a
+						href="https://dopresskit.com/#thanks">these fine folks</a></p>
 			</div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript"
-		src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
 	<script type="text/javascript"
-		src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
 			var container = $('.images');
