--- a/drive-rally.html
+++ b/drive-rally.html
@@ -8,7 +8,7 @@
 	<title>#DRIVE - Pixel Perfect Dude</title>
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
 		type="text/css">
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="https://pixelperfectdude.github.io/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 		<div class="uk-grid">
 			<div id="navigation" class="uk-width-medium-1-4">
 				<h1 class="nav-header">Pixel Perfect Dude</h1>
-				<a class="nav-header" href="index.html" target="_self">press kit</a></strong>
+				<a class="nav-header" href="https://pixelperfectdude.github.io/index.html" target="_self">press kit</a></strong>
 				<ul class="uk-nav uk-nav-side">
 					<li><a href="#factsheet">Factsheet</a></li>
 					<li><a href="#description">Description</a></li>
@@ -37,12 +37,12 @@
 						<h2 id="factsheet">Factsheet</h2>
 						<p>
 							<strong>Developer:</strong><br />
-							<a href="index.html">Pixel Perfect Dude</a><br />
+							<a href="https://pixelperfectdude.github.io/index.html">Pixel Perfect Dude</a><br />
 							Based in Kalisz, Poland
 						</p>
 						<p>
 							<strong>Publisher:</strong><br />
-							<a href="index.html">Pixel Perfect Dude</a><br />
+							<a href="https://pixelperfectdude.github.io/index.html">Pixel Perfect Dude</a><br />
 						</p>
 						<p>
 							<strong>Genre:</strong><br />
@@ -124,7 +124,7 @@ And not only it nails the spirit of the 90s. It reignites it for a new generatio
 				</p>
 				<hr>
 
-				<h2 id="images">Images</h2><a href="shmupfest/images/images.zip">
+				<h2 id="images">Images</h2><a href="https://drive.google.com/drive/folders/1JKOK5dJ4IkEeAolWxI7PJ1XVXeCd4UpF?usp=drive_link">
 					<div class="uk-alert">download all screenshots &amp; photos as .zip (2MB)</div>
 				</a>
 				<div class="uk-grid images">
