--- a/drive-rally.html
+++ b/drive-rally.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>#DRIVE - Pixel Perfect Dude</title>
-	<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet"
 		type="text/css">
 	<link href="https://pixelperfectdude.github.io/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -70,7 +70,7 @@
 						</p>
 						<p>
 							<strong>Website:</strong><br />
-							<a href="http://drive.game/rally">drive.game/rally</a>
+							<a href="https://drive.game/rally">drive.game/rally</a>
 						</p>
 						<p>
 							<strong>Regular Price:</strong><br />
@@ -111,15 +111,15 @@ And not only it nails the spirit of the 90s. It reignites it for a new generatio
 
 				<h2 id="trailers">Videos</h2>
 				<p><strong>#DRIVE Rally - Reveal Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/Pracg9fAmzg">YouTube</a>
+						href="https://www.youtube.com/embed/Pracg9fAmzg">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/Pracg9fAmzg" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/Pracg9fAmzg" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<p><strong>#DRIVE Rally - Demo Gameplay Trailer</strong>&nbsp;<a
-						href="http://www.youtube.com/embed/4J7UnJNRLcw">YouTube</a>
+						href="https://www.youtube.com/embed/4J7UnJNRLcw">YouTube</a>
 				<div class="uk-responsive-width iframe-container">
-					<iframe src="http://www.youtube.com/embed/4J7UnJNRLcw" frameborder="0" allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/4J7UnJNRLcw" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</p>
 				<hr>
@@ -243,24 +243,24 @@ And not only it nails the spirit of the 90s. It reignites it for a new generatio
 								href="https://twitter.com/drivethegame">twitter.com/drivethegame</a></p>
 						<p><strong>Facebook</strong><br /><a
 								href="https://fb.com/drive.game">facebook.com/drive.game</a></p>
-						<p><strong>Web</strong><br /><a href="http://drive.game/rally">drive.game/rally</a></p>
+						<p><strong>Web</strong><br /><a href="https://drive.game/rally">drive.game/rally</a></p>
 					</div>
 				</div>
 
 				<hr>
 
-				<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a
-						href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a
-						href="http://dopresskit.com/#thanks">these fine folks</a></p>
+				<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a
+						href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a
+						href="https://dopresskit.com/#thanks">these fine folks</a></p>
 			</div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript"
-		src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
 	<script type="text/javascript"
-		src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function () {
 			var container = $('.images');
@@ -279,7 +279,7 @@ And not only it nails the spirit of the 90s. It reignites it for a new generatio
 
 		(function () {
 			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 	</script>
